--- a/movie_box_application/pubspec.yaml
+++ b/movie_box_application/pubspec.yaml
@@ -50,7 +50,7 @@ dev_dependencies:
 
 flutter_native_splash:
   color: "#000000"
-  image: "assets/logo.jpeg"
+  image: "assets/images/logo.jpeg"
   android: true
   ios: true 
 
