--- a/movie_box_application/pubspec.yaml
+++ b/movie_box_application/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   #localization
   easy_localization: ^3.0.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
