--- a/movie_box_application/pubspec.yaml
+++ b/movie_box_application/pubspec.yaml
@@ -28,13 +28,17 @@ dependencies:
 
   #cache
   shared_preferences: ^2.0.15
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
   #state management
   provider: ^6.0.5
 
   #localization
   easy_localization: ^3.0.1
   cached_network_image: ^3.2.3
+
+  
 
 dev_dependencies:
   flutter_test:
